# oce-ecomm-abv-calculation

./: .gitattributes  .gitignore  Actual Power and CI Coverage.ipynb  E01 - Experiments.ipynb  E01 - Vanilla and One-way Bootstrap.ipynb  E02 - Two-way Bootstrap.ipynb  Experiments.ipynb  Exploration.ipynb  F01 - Response vs Next Response.ipynb  F02-03 - Vanilla vs Oneway Bootstrap SE.ipynb  F04 - Actual Power and CI Coverage.ipynb  README.md  Response vs Next Response.ipynb  T01 - Dataset Summary.ipynb  T02 - One-way Two-way Bootstrap Comparison (ASP).ipynb  pyproject.toml
data/: README.md  expt_oneway_olist-brazilian-ecommerce-customer-order-view_r-BasketSize_consolidated.parquet  expt_oneway_uci-online-retail-ii-customer-order-item-view_r-SellingPrice_consolidated.parquet  expt_twoway_olist-brazilian-ecommerce-customer-order-item-view_r-SellingPrice_consolidated.parquet  expt_twoway_uci-online-retail-ii-customer-order-item-view_r-SellingPrice_consolidated.parquet  expt_vanilla_olist-brazilian-ecommerce-customer-order-item-view_r-SellingPrice_consolidated.parquet  expt_vanilla_olist-brazilian-ecommerce-customer-order-view_r-BasketSize_consolidated.parquet  expt_vanilla_olist-brazilian-ecommerce-customer-order-view_r-BasketValue_consolidated.parquet  expt_vanilla_uci-online-retail-ii-customer-order-item-view_r-SellingPrice_consolidated.parquet  expt_vanilla_uci-online-retail-ii-customer-order-view_r-BasketSize_consolidated.parquet  expt_vanilla_uci-online-retail-ii-customer-order-view_r-BasketValue_consolidated.parquet  (+3 more)
tests/artifacts/: README.md  sample_df.py  (+2 more)
(+20 files in other folders)
