[tool.poetry]
name = "oce-ecomm-abv-calculation"
version = "0.1.0"
description = "Codebase demonstrating biases in measurement uncertainty estimation in online controlled experiments involved average basket value (ABV) and other e-commerce metrics."
authors = ["C. H. Bryan Liu"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
numpy = "^1.23.4"
scipy = "^1.9.3"
matplotlib = "^3.6.1"
seaborn = "^0.11.1"
jupyter = "^1.0.0"
pyarrow = "^9.0.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
